--- a/Praca_Inzynierska.tex
+++ b/Praca_Inzynierska.tex
@@ -13,6 +13,15 @@
 \usepackage{subcaption}
 \usepackage{siunitx}
 \usepackage{tabularx}
+\usepackage{hyperref}
+
+\hypersetup{
+    colorlinks,
+    citecolor=black,
+    filecolor=black,
+    linkcolor=black,
+    urlcolor=black
+}
 
 \addbibresource{bibliografia.bib}
 \graphicspath{{./zdjecia/}}
