--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -31,6 +31,14 @@
   title = "Mobile Operating System Market Share Worldwide",
   url = "https://gs.statcounter.com/os-market-share/mobile/worldwide"
 }
+@online{os1,
+  title = "Mobile Operating System Market Share Worldwide - Years 2013-2016",
+  url = "https://gs.statcounter.com/os-market-share/desktop-mobile-tablet/worldwide/yearly-2013-2016-bar"
+}
+@online{os2,
+  title = "Mobile Operating System Market Share Worldwide - Years 2016-2019",
+  url = "https://gs.statcounter.com/os-market-share/desktop-mobile-tablet/worldwide/yearly-2016-2019-bar"
+}
 @online{dvm,
   title = "Mobile VS. Desktop Internet Usage",
   url = "https://www.broadbandsearch.net/blog/mobile-desktop-internet-usage-statistics"
