Mmm, pokaz mi swoje licencje

--- a/Praca_Inzynierska.tex
+++ b/Praca_Inzynierska.tex
@@ -121,18 +121,30 @@
     natomiast wygląd aplikacji, oraz interakcje pomiędzy poszczególnymi modułami
     zarządzane są przy pomocy frameworku \emph{Flutter}.
   }
-  \subsection{Prawa autorskie}
+  \subsection{Licencje}
   {
-    Oświadczam, że przekładana praca inżynierska została napisana samodzielnie i nie narusza
-    praw autorskich w rozumieniu ustawy z dnia 4 lutego 1994 roku o prawie autorskim
-    i prawach pokrewnych (j.t. Dz. U. z 2016 r. poz. 666, z późn. zm.) oraz dóbr
-    osobistych chronionych prawem cywilnym, a także nie zawiera danych i informacji,
-    które mogły zostać uzyskane w sposób niedozwolony. Nie była ona także wcześniej podstawą
-    żadnej innej urzędowej procedury związanej z nadawaniem dyplomów wyższej uczelni lub
-    tytułów zawodowych.
+    Praca została opracowana przy wykorzystaniu technologii opartych na następujących
+    licencjach:
+    \begin{itemize}
+      \item Flutter - BSD 3-Clause “New” or “Revised” License
+      \item Dart - BSD 3-Clause "New" or "Revised" License
+      \item VIM - Licencja Open-Source, GPL-Compatible 
+      \item Android Studio - Apache License 2.0
+      \item Pluginy wykorzystane w projekcie: 
+      \begin{itemize}
+        \item http - BSD 3-Clause “New” or “Revised” License 
+        \item flutter\_spinkit - MIT License 
+        \item table\_calendar - Apache License 2.0
+        \item avatar\_glow - MIT License 
+        \item speech\_to\_text - BSD 3-Clause “New” or “Revised” License 
+        \item firebase\_auth - BSD 3-Clause “New” or “Revised” License 
+        \item cloud\_firestore - BSD 3-Clause “New” or “Revised” License 
+        \item provider - MIT License
+        \item percent\_indicator - BSD 3-Clause “New” or “Revised” License  
+      \end{itemize}
+    \end{itemize}
   }
 }
-
 \section{Teoria}
 {
   \subsection{Rynek aplikacji mobilnych}
